--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -88,10 +88,10 @@ body {
 .gpii-prefsEditor-save, .gpii-prefsEditor-gotoPcp {
     font-family: 'Roboto Slab', serif;
     background-color: #4C5259;
-    border-radius: 5px;
+    border-radius:0.25em;
     color: #FFFFFF;
     cursor: pointer;
-    margin: 0.1em 0.1em 0.1em -2.3em;
+    margin: 0.1em 0.1em 0.1em -2.2em;
     padding: 0.4em 0.4em 0.4em 1.5em;
     position: relative;
     font-size: 1.5em;
@@ -102,19 +102,17 @@ body {
     word-wrap: break-word;
 }
 
+.gpii-pcp-saveButtonContainer {
+    display: none;
+}
+
 .gpii-PCP-save {
     background-color: #249FB7;
-    display: none;
     font-weight: bold;
     border: 0.15em solid #249FB7;
 }
 
-.gpii-PCP-save:hover {
-    background-color: white;
-    color: #249FB7;
-}
-
-.gpii-pmt-saveAndApplyButtonLabel {
+.gpii-prefsEditor-saveAndApplyButtonLabel {
     cursor: pointer;
     position: relative;
     vertical-align: middle;
@@ -123,7 +121,7 @@ body {
     font-size: 2em !important;
 }
 
-.gpii-pmt-saveAndApplyButtonLabel:before {
+.gpii-prefsEditor-saveAndApplyButtonLabel:before {
     content: "\e60c"
 }
 
@@ -156,6 +154,16 @@ body {
 .gpii-pcp-saveButtonContainer {
     float: right;
     width: 165px;
+}
+
+.gpii-pcp-saveButtonContainer:hover .gpii-pcp-cloudIcon {
+    color: #249FB7;
+    background-color: transparent;
+}
+
+.gpii-pcp-saveButtonContainer:hover .gpii-PCP-save {
+    color: #249FB7;
+    background-color: white;
 }
 
 .gpii-prefsEditor-notification {
