GPII-675: Aligned the punctuation radios in the center.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1322,6 +1322,7 @@ input[type="radio"] + label.radioButton-right > span {
 	border-width: 0.66em;
     width: 0em;
     height: 0em;
+    margin: 0 auto;
 }
 
 input[type="radio"]:checked + label.radioButton-left > span,
