GPII-705: Updated infusion and added the overview panel to the exploration tool demo

--- a/src/shared/lib/infusion/framework/preferences/css/ie8.css
+++ b/src/shared/lib/infusion/framework/preferences/css/ie8.css
@@ -3,9 +3,11 @@
 .fl-prefsEditor .fl-prefsEditor-onoff input {
     clip: auto;
     height: 1em;
-    width: 1em;    
-    margin: 0;
+    width: 1em;
+    margin: 0 10px 0 0;
     position: relative;
+    display: inline;
+    float: left;
 }
 .fl-prefsEditor .fl-prefsEditor-onoff .fl-prefsEditor-switch {
     display: none;
