--- a/src/shared/lib/infusion/components/overviewPanel/html/overviewPanelTemplate.html
+++ b/src/shared/lib/infusion/components/overviewPanel/html/overviewPanelTemplate.html
@@ -19,9 +19,30 @@
         <div class="fl-overviewPanel-footer">
             <div class="fl-overviewPanel-links">
                 <ul>
-                    <li><a class="flc-overviewPanel-codeLink" href="#"><span class="fl-overviewPanel-links-icon-github"></span> <span class="flc-overviewPanel-codeLinkText"></span></a></li>
-                    <li><a class="flc-overviewPanel-apiLink" href="#"><span class="fl-overviewPanel-links-icon-api"></span> <span class="flc-overviewPanel-apiLinkText"></span></a></li>
-                    <li><a class="flc-overviewPanel-designLink" href="#"><span class="fl-overviewPanel-links-icon-design"></span> <span class="flc-overviewPanel-designLinkText"></span></a></li>
+                    <li>
+                        <a class="flc-overviewPanel-demoCodeLink" href="#">
+                            <div class="fl-overviewPanel-iconContainer"><span class="fl-overviewPanel-links-icon fl-overviewPanel-links-icon-code"></span></div>
+                            <span class="flc-overviewPanel-demoCodeLinkText fl-overviewPanel-demoCodeLinkText"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="flc-overviewPanel-apiLink" href="#">
+                            <div class="fl-overviewPanel-iconContainer"><span class="fl-overviewPanel-links-icon fl-overviewPanel-links-icon-api"></span></div>
+                            <span class="flc-overviewPanel-apiLinkText fl-overviewPanel-apiLinkText"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="flc-overviewPanel-designLink" href="#">
+                            <div class="fl-overviewPanel-iconContainer"><span class="fl-overviewPanel-links-icon fl-overviewPanel-links-icon-design"></span></div>
+                                <span class="flc-overviewPanel-designLinkText fl-overviewPanel-designLinkText"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="flc-overviewPanel-infusionCodeLink" href="#">
+                            <div class="fl-overviewPanel-iconContainer"><span class="fl-overviewPanel-links-icon fl-overviewPanel-links-icon-github"></span></div>
+                            <span class="flc-overviewPanel-infusionCodeLinkText fl-overviewPanel-infusionCodeLinkText"></span>
+                        </a>
+                    </li>
                 </ul>
                 <div class="fl-overviewPanel-feedback-link">
                     <span class="flc-overviewPanel-feedbackText fl-overviewPanel-feedbackText"></span><br/>
