GPII-734: Made the logout link in PMT <a>. It's also a reset button now, because we don't have the "for" attribute.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -224,6 +224,7 @@ body {
 .gpii-prefsEditor-pmt-userLogoutLink {
     float: right;
     text-align: right;
+    font-size: 120%;
 }
 
 .gpii-prefsEditor-pmt-userLogoutLink:first-letter,
