GPII-734, GPII-735: Fixed keyboard navigation and focus styling of "full-editor" and "log-out" links in PCP.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -242,6 +242,7 @@ body {
 .gpii-prefsEditor-pcp-userLogout {
     float: right;
     text-align: right;
+    font-size: 120%;
 }
 
 .gpii-prefsEditor-fullEditor {
