--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -238,6 +238,7 @@ body {
 .gpii-prefsEditor-pmt-userLogoutLink {
     float: right;
     text-align: right;
+    font-size: 120%;
 }
 
 .gpii-prefsEditor-pmt-userLogoutLink:first-letter,
@@ -255,6 +256,7 @@ body {
 .gpii-prefsEditor-pcp-userLogout {
     float: right;
     text-align: right;
+    font-size: 120%;
 }
 
 .gpii-prefsEditor-fullEditor {
