--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -326,48 +326,12 @@ input[type=checkbox], input[type=radio] {
 .gpii-increaseSize-orientationPositionIcon {
     height: 0 !important;
     width: 0 !important;
-    /*color: #636c7c;
-    margin-top: -1em;*/
 }
-
 
 .gpii-increaseSize-orientationPositionIcon:before {
     font-size: 6.3em !important;
 }
 
-/*
-.gpii-increaseSize-orientationPositionBackground {
-    height: 4.9em !important;
-    width: 6.3em !important;
-    padding-top: 2px;
-}
-
-
-.gpii-increaseSize-orientationPositionBackground:before {
-    font-size: 6.2em !important;
-    opacity: 0.3;
-}
-
-.gpii-increaseSize-orientationPositionFullscreen > .gpii-increaseSize-orientationPositionFrame:before {
-    font-size: 6.3em !important;
-    content: "\e601" !important;
-}
-
-.gpii-increaseSize-orientationPositionLens > .gpii-increaseSize-orientationPositionIcon:before {
-    content: "\e61e";
-}
-
-.gpii-increaseSize-orientationPositionFullscreen > .gpii-increaseSize-orientationPositionIconMain {
-    opacity:0.5;
-    position: relative;
-}
-
-.gpii-increaseSize-orientationPositionFullscreen > .gpii-increaseSize-orientationPositionIconMain:before {
-    content: "\e601";
-    font-size: 6.3em !important;
-    color: #00a9bd;
-}
-*/
 .gpii-increaseSize-orientationPositionTop > .gpii-increaseSize-orientationPositionIconMain:before {
     content: "\e609";
 }
@@ -384,6 +348,27 @@ input[type=checkbox], input[type=radio] {
     content: "\e60f";
 }
 
+.gpii-increaseSize-orientationPositionContainer > .gpii-prefsEditor-choice > .gpii-prefsEditor-orientationPositionIndicator {
+    font-family: 'C4Aicons' !important;
+    font-size: 2em;
+    color: black; 
+    position: relative;
+    top: 0.6em;
+    height: 1em !important;
+	margin: -0.75em 0em 0em 0.5em;
+    z-index: 11;
+    text-align: center !important;
+    display:block;
+}
+
+.gpii-orientationPositionText {
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    font-size: 1em;
+    display:block;
+    padding-left: 1.1em;
+}
 
 
 /*
