--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1541,3 +1541,7 @@ label.gpii-preset-button-label {
 .gpii-focus {
     outline: 2px solid black !important;
 }
+
+.gpii-hide-element {
+	display: none !important;
+}
