--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -126,7 +126,7 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 .gpii-prefsEditor-headerTitle {
     font-family: 'Roboto Slab', serif;
     color: white;
-    font-size: 1.6em !important;
+    font-size: 1.8em !important;
     display: table-cell;
     color: #FFFFFF;
     float: none;
@@ -1581,4 +1581,11 @@ h3.gpii-label {
 h1.gpii-prefsEditor-headerTitleContrast, h1.gpii-prefsEditor-headerTitleIncreaseSize {
     font-size: 1em;
     padding: 0px;
+}
+
+h3.gpii-speakText-label {
+    font-size: 1.2em !important;
+    font-weight: bold;
+    padding: 0px;
+    margin-bottom: 5px;
 }
