GPII-878: Fixing heading one label and icon label. Tranform labels to spans.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1612,3 +1612,18 @@ h3.gpii-speakText-label {
     padding: 0px;
     margin-bottom: 5px;
 }
+
+span.gpii-preset-button-label {
+    z-index: 2;
+    position: absolute;
+    padding-left: 90px;
+    padding-top: 31px;
+    color: white;
+    background-color: rgb(85, 98, 115);
+    border: 1px solid rgb(85, 98, 115);
+    width: 444px;
+    height: 59px;
+    text-align: left;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.4em!important;
+}
