GPII-952: Make status message a dialog.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -254,6 +254,10 @@ body {
     width: 99%;
 }
 
+.gpii-pcp-statusMessage {
+    display: none;
+}
+
 .gpii-prefsEditor-pcp-userLogout {
     float: right;
     text-align: right;
