GPII-952: Add styling to the message dialog box.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1508,7 +1508,7 @@ label.gpii-preset-button-label {
     font-size: 90%;
     height: 35px;
     border: 2px;
-    border-color: #D5E1E2 !important;
+    border-color: #D5E1E2;
     border-style: solid none solid solid;
     padding-left: 10px;
 }
